--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-   version="6.0">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <display-name>Mi app de Jakarta</display-name>
     <welcome-file-list>
         <welcome-file>principal.html</welcome-file>
     </welcome-file-list>
+    <servlet-mapping>
+        <servlet-name>PrimerController</servlet-name>
+        <url-pattern>/PrimerController</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <servlet>
+        <description>Este es un server de ejemplo</description>
+        <display-name>Ejemplo inicial</display-name>
+        <servlet-name>servetlazo</servlet-name>
+        <servlet-class>com.edsondev26.jakarta_eiv.controllers.PrimerController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PrimerController</servlet-name>
+        <servlet-class>com.edsondev26.jakarta_eiv.controllers.PrimerController</servlet-class>
+    </servlet>
 </web-app>
